1.0.6
--------------------------------

- fix jython/windows interactions 
- fix waitclose/callback-with-endmarker race condition

1.0.5
--------------------------------

- more care during receiver-thread finalization during interp-shutdown,
  should get rid of annoying and meaningless exceptions
- fix glitch in ssh-fileserver example 
- experimentally add "setup.py test" support - will run py.test 

1.0.4
--------------------------------

- try to deal more cleanly with interpreter shutdown setting globals to
  None. this avoids (hopefully) some bogus tracebacks at process exit. 

1.0.3
--------------------------------

- refine termination some more: CTRL-C and gateway.exit will 
  now try harder to interrupt remote execution.  this 
  helps to avoid left-over ssh-processes.
- fix read-on-non-blocking-files issue probably related to jython only:  
  the low-level read on subprocess pipes may be non-blocking, returning 
  less bytes than requested - so we now loop.
- Windows/python2.4: fix bug that killing subprocesses would fail
- make RemoteError and TimeoutError available directly on execnet namespace

- fix some doc and test issues (thanks thm and ronny), add ssh_fileserver example
- update internal copy of apipkg
- always skip remote tests if no ssh specs given

1.0.2 
--------------------------------

- generalize channel-over-channel sending: you can now have channels 
  anywhere in a data structure (i.e. as an item of a container type).
  Add according examples.

- automatically close a channel when a remote callback raises 
  an exception, makes communication more robust because until 
  now failing callbacks rendered the receiverthread unuseable 
  leaving the remote side in-accessible.

- internally split socket gateways, speeds up popen-gateways
  by 10% (now at <50 milliseconds per-gateway on a 1.5 GHZ machine) 

- fix bug in channel.receive() that would wrongly raise a TimeoutError 
  after 1000 seconds (thanks Ronny Pfannschmidt) 

1.0.1